fix: gap between background-repeat on Safari

--- a/src/styles/reset.scss
+++ b/src/styles/reset.scss
@@ -91,7 +91,7 @@ html {
         display: flex;
         flex-direction: column;
 
-        background-image: url('data:image/svg+xml;utf8,<svg width="21" height="21" viewBox="0 0 21 21" fill="none" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" clip-rule="evenodd" d="M21 0H0V21H21V0ZM11 10.5C11 10.7761 10.7761 11 10.5 11C10.2239 11 10 10.7761 10 10.5C10 10.2239 10.2239 10 10.5 10C10.7761 10 11 10.2239 11 10.5Z" fill="%231A1A1A"/></svg>');
+        background-image: url('data:image/svg+xml;utf8,<svg width="21" height="21" viewBox="0 0 21 21" fill="none" xmlns="http://www.w3.org/2000/svg" shape-rendering="crispEdges"><path fill-rule="evenodd" clip-rule="evenodd" d="M21 0H0V21H21V0ZM11 10.5C11 10.7761 10.7761 11 10.5 11C10.2239 11 10 10.7761 10 10.5C10 10.2239 10.2239 10 10.5 10C10.7761 10 11 10.2239 11 10.5Z" fill="%231A1A1A"/></svg>');
         background-attachment: fixed;
 
         color: hsl(var(--secondary-1));
